k8s/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sim-dep
spec:
  selector:
    matchLabels:
      app: sim-dep
  replicas: 1
  template:
    metadata:
      labels:
        app: sim-dep
    spec:
      containers:
        - name: sim-dep
          image: olamai/simulation:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
        - name: envoy-proxy
          image: olamai/envoy-proxy:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: sim-dep-envoy
spec:
  type: NodePort
  selector:
    app: sim-dep
  ports:
    - port: 9091
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sim-dep
  labels:
    app: sim-dep
spec:
  type: NodePort
  ports:
    - port: 9090
      protocol: TCP
  selector:
    app: sim-dep
