k8s/envoy-proxy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: envoy-proxy
spec:
  selector:
    matchLabels:
      app: envoy-proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: envoy-proxy
    spec:
      containers:
        - name: envoy-proxy
          image: olamai/envoy-proxy:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-proxy
  labels:
    app: envoy-proxy
spec:
  type: LoadBalancer
  loadBalancerIP: "35.193.119.21"
  selector:
    app: envoy-proxy
  ports:
    - port: 9091
      protocol: TCP
      nodePort: 31036
